更新文档家目录描述

--- a/lfp_documents/material/partials/footer.html
+++ b/lfp_documents/material/partials/footer.html
@@ -48,8 +48,8 @@
           </div>
         {% endif %}
         Made with
-        <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
-          Material for MkDocs
+        <a href="https://lee91.github.io/lfp_tech_advance/" target="_blank" rel="noopener">
+          lfp documents
         </a>
       </div>
       {% include "partials/social.html" %}
